--- a/src/stories/Colours.mdx
+++ b/src/stories/Colours.mdx
@@ -1,6 +1,6 @@
 import { Meta, ColorPalette, ColorItem } from '@storybook/blocks';
 
-<Meta title="Colours" />
+<Meta title="Design System/Colours Palette" />
 
 <ColorPalette>
   <ColorItem
