New components + Some small update

--- a/src/app/components/Colours/Colours.mdx
+++ b/src/app/components/Colours/Colours.mdx
@@ -63,6 +63,10 @@ import { Meta, ColorPalette, ColorItem } from '@storybook/blocks';
       'acu-sand': '#e8e3db',
       'acu-white': '#ffffff',
       'acu-yellow-100': '#F2BB0A',
+      'acu-gold': '#ad915d',
+
     }}
-  />
+
+/>
+
 </ColorPalette>
