Link in the intro

--- a/src/app/Introduction.mdx
+++ b/src/app/Introduction.mdx
@@ -10,8 +10,13 @@ import { nameColours } from './utils/helper';
     Storybook is here to present you the different components at the content creator disposition!
   </div>
   <div className="sb-section-title">
+    ## Example documentation
+    Here you can find a possible future aspect of the documentation. [Examples](?path=/docs/components-contentpanel--docs)
+    </div>
+  <div className="sb-section-title">
     ## Colours principles 
     [More colours](?path=/docs/design-system-colours-palette--docs)
+    </div>
 
     ### Title
 
@@ -38,4 +43,3 @@ import { nameColours } from './utils/helper';
     </div>
 
   </div>
-</div>
