chore: Update Introduction page with sidebar link

--- a/src/app/Introduction.mdx
+++ b/src/app/Introduction.mdx
@@ -7,7 +7,7 @@ import { nameColours } from './utils/helper';
 <div className="sb-container">
   <div className="sb-section-title">
     # Introduction 
-    Storybook is here to present you the different components at the content creator disposition! Just an update to test the deployment of the documentation.
+    Storybook is here to present you the different components at the content creator disposition! You can find the different components in the sidebar.
   </div>
   <div className="sb-section-title">
     ## Example documentation
